--- a/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/src/main/resources/templates/admin/fragments/sidebar.html
@@ -54,6 +54,19 @@
             </li>
             <li class="treeview">
                 <a href="#">
+                    <i class="fa fa-tag"></i>
+                    <span>Category</span>
+                    <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+                </a>
+                <ul class="treeview-menu">
+                    <li><a href="/admin/categories/all"><i class="fa fa-square-o"></i> List All Category</a></li>
+                    <li><a href="pages/charts/morris.html"><i class="fa fa-square-o"></i> Add new</a></li>
+                </ul>
+            </li>
+            <li class="treeview">
+                <a href="#">
                     <i class="fa fa-pencil"></i>
                     <span>Author</span>
                     <span class="pull-right-container">
