--- a/src/main/resources/templates/admin/layouts/master.html
+++ b/src/main/resources/templates/admin/layouts/master.html
@@ -113,5 +113,6 @@
 <script src="/resources/alte/dist/js/pages/dashboard.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="/resources/alte/dist/js/demo.js"></script>
+<script layout:fragment="script"></script>
 </body>
 </html>
