--- a/src/main/resources/templates/admin/categories/list-all-category.html
+++ b/src/main/resources/templates/admin/categories/list-all-category.html
@@ -50,7 +50,14 @@
                     <tr th:each="category : ${categoryList}" th:object="${category}">
                         <td th:text="*{id}"></td>
                         <td th:text="*{name}"></td>
-                        <td><span class="label label-success" th:text="*{status}">Approved</span></td>
+                        <td>
+                            <th:block th:if="*{status}">
+                                <span class="label label-success" th:text="*{status}"></span>
+                            </th:block>
+                            <th:block th:unless="*{status}">
+                                <span class="label label-danger" th:text="*{status}"></span>
+                            </th:block>
+                        </td>
                         <td th:text="*{#dates.format(createdAt, 'yyyy-MM-dd: hh:mm s a')}"></td>
                         <td>
                             <button th:attr="data-id=*{id}" type="button" class="btn btn-primary btn-xs btn-update">
@@ -85,23 +92,24 @@
                         <!-- form start -->
                         <form class="form-horizontal">
                             <div class="box-body">
+                                <input type="hidden" id="category-id">
                                 <div class="form-group">
-                                    <label for="inputEmail3" class="col-sm-2 control-label">Name</label>
+                                    <label for="category-name" class="col-sm-2 control-label">Name</label>
 
                                     <div class="col-sm-10">
-                                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                                        <input type="text" class="form-control" id="category-name" placeholder="Name">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="inputEmail3" class="col-sm-2 control-label">Status</label>
+                                    <label class="col-sm-2 control-label">Status</label>
                                     <div class="col-sm-10 radio">
                                         <label>
-                                            <input type="radio" name="optionsRadios" id="status-true" value="option1" checked="">
+                                            <input type="radio" name="optionsRadios" id="status-true" value="true">
                                             True
                                         </label>
                                         &nbsp
                                         <label>
-                                            <input type="radio" name="optionsRadios" id="status-false" value="option1" checked="">
+                                            <input type="radio" name="optionsRadios" id="status-false" value="false">
                                             False
                                         </label>
                                     </div>
@@ -135,10 +143,44 @@
                 window.location = '/admin/categories/all?name=' + text_to_search;
             }
         });
-
+        var data_id ='';
         $('.btn-update').on('click', function () {
-           var data_id =$(this).attr('data-id');
+           data_id =$(this).attr('data-id');
            $('.modal').modal('show');
+           // $.ajax({
+           //     url:'/api/v1/categories/' + data_id,
+           //     method:'GET',
+           //     contentType:'application/json',
+           //     success: function (response) {
+           //         console.log(response);
+           //         $('#category-id').val(response.data.id);
+           //         $('#category-name').val(response.data.name);
+           //     },
+           //     error: function (response) {
+           //         console.log(response)
+           //     }
+           // });
+        });
+
+        $('.modal').on('show.bs.modal', function (e) {
+            $.ajax({
+                url:'/api/v1/categories/' + data_id,
+                method:'GET',
+                contentType:'application/json',
+                success: function (response) {
+                    console.log(response);
+                    $('#category-id').val(response.data.id);
+                    $('#category-name').val(response.data.name);
+                    if (response.data.status == false){
+                        $('#status-false').attr('checked', 'checked');
+                    }else{
+                        $('#status-true').attr('checked', 'checked');
+                    }
+                },
+                error: function (response) {
+                    console.log(response)
+                }
+            });
         });
     })
 </script>
