--- a/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/src/main/resources/templates/admin/fragments/sidebar.html
@@ -61,7 +61,7 @@
             </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="/admin/categories/all"><i class="fa fa-square-o"></i> List All Category</a></li>
+                    <li><a href="/admin/categories/all/paginate"><i class="fa fa-square-o"></i> List All Category</a></li>
                     <li><a href="pages/charts/morris.html"><i class="fa fa-square-o"></i> Add new</a></li>
                 </ul>
             </li>
