--- a/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/src/main/resources/templates/admin/fragments/sidebar.html
@@ -48,8 +48,8 @@
             </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="pages/charts/chartjs.html"><i class="fa fa-square-o"></i> List All Books</a></li>
-                    <li><a href="pages/charts/morris.html"><i class="fa fa-square-o"></i> Add new</a></li>
+                    <li><a href="#"><i class="fa fa-square-o"></i> List All Books</a></li>
+                    <li><a href="/admin/books/add"><i class="fa fa-square-o"></i> Add new</a></li>
                 </ul>
             </li>
             <li class="treeview">
@@ -62,7 +62,7 @@
                 </a>
                 <ul class="treeview-menu">
                     <li><a href="/admin/categories/all/paginate"><i class="fa fa-square-o"></i> List All Category</a></li>
-                    <li><a href="pages/charts/morris.html"><i class="fa fa-square-o"></i> Add new</a></li>
+                    <li><a href="#"><i class="fa fa-square-o"></i> Add new</a></li>
                 </ul>
             </li>
             <li class="treeview">
@@ -87,8 +87,8 @@
             </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="pages/charts/chartjs.html"><i class="fa fa-square-o"></i> List All Books</a></li>
-                    <li><a href="pages/charts/morris.html"><i class="fa fa-square-o"></i> Add new</a></li>
+                    <li><a href="#"><i class="fa fa-square-o"></i> List All Users</a></li>
+                    <li><a href="#"><i class="fa fa-square-o"></i> Add new</a></li>
                 </ul>
             </li>
         </ul>
