update add category

--- a/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/src/main/resources/templates/admin/fragments/sidebar.html
@@ -62,7 +62,7 @@
                 </a>
                 <ul class="treeview-menu">
                     <li><a href="/admin/categories/all/paginate"><i class="fa fa-square-o"></i> List All Category</a></li>
-                    <li><a href="#"><i class="fa fa-square-o"></i> Add new</a></li>
+                    <li><a href="/admin/categories/add"><i class="fa fa-square-o"></i> Add new</a></li>
                 </ul>
             </li>
             <li class="treeview">
