--- a/src/main/resources/templates/admin/categories/list-all-category.html
+++ b/src/main/resources/templates/admin/categories/list-all-category.html
@@ -16,7 +16,7 @@
         </h1>
         <ol class="breadcrumb">
             <div class="right float">
-                <button type="button" class="btn btn-block btn-primary"><i class="fa fa-plus-square"></i> Add New</button>
+                <button type="button" class="btn btn-primary btn-block btn-addNew"><i class="fa fa-plus-square"></i> Add New</button>
             </div>
         </ol>
     </section>
@@ -90,8 +90,8 @@
 
     </section>
     <!-- /.content -->
-    <!--start modal-->
-    <div class="modal fade in" id="modal-default">
+    <!--start modal update-->
+    <div class="modal fade in" id="modal-update">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -144,7 +144,46 @@
         </div>
         <!-- /.modal-dialog -->
     </div>
-    <!--end modal-->
+    <!--end modal update-->
+    <!--start modal add new-->
+    <div class="modal fade in" id="modal-add">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span></button>
+                    <h4 class="modal-title">Add New Category</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="box box-info">
+                        <div class="box-header with-border">
+                            <!--<h3 class="box-title">Horizontal Form</h3>-->
+                        </div>
+                        <!-- /.box-header -->
+                        <!-- form start -->
+                        <form class="form-horizontal">
+                            <div class="box-body">
+                                <div class="form-group">
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control" id="add-category-name" placeholder="Category Name">
+                                    </div>
+                                </div>
+
+                            </div>
+                            <!-- /.box-body -->
+                        </form>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default pull-left btn-cancel" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary btn-submit">Save</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <!--end modal add new-->
 </div>
 <!-- /.content-wrapper -->
 
@@ -163,29 +202,18 @@
         var data_id ='';
         $('.btn-update').on('click', function () {
            data_id =$(this).attr('data-id');
-           $('.modal').modal('show');
-           // $.ajax({
-           //     url:'/api/v1/categories/' + data_id,
-           //     method:'GET',
-           //     contentType:'application/json',
-           //     success: function (response) {
-           //         console.log(response);
-           //         $('#category-id').val(response.data.id);
-           //         $('#category-name').val(response.data.name);
-           //     },
-           //     error: function (response) {
-           //         console.log(response)
-           //     }
-           // });
+           // $('.modal').modal('show');
+            $('#modal-update').modal('show');
         });
+
         //ajax pass value from table list to modal form
-        $('.modal').on('show.bs.modal', function () {
+        $('#modal-update').on('show.bs.modal', function () {
             $.ajax({
                 url:'/api/v1/categories/' + data_id,
                 method:'GET',
                 contentType:'application/json',
                 success: function (response) {
-                    console.log(response);
+                    //console.log(response);
                     $('#category-id').val(response.data.id);
                     $('#category-name').val(response.data.name);
                     if (response.data.status == false){
@@ -230,7 +258,6 @@
                 }
             });
         });
-
         //ajax delete
         $('.btn-delete-category').on('click', function () {
             data_id = $('.btn-delete-category').attr('data-id');
@@ -251,6 +278,39 @@
             }
 
         });
+
+        //ajax add new
+        $('.btn-addNew').on('click', function () {
+            $('#modal-add').modal('show');
+        });
+
+        $('.btn-submit').on('click', function (event) {
+            event.preventDefault();
+
+            var name = $('#add-category-name').val();
+
+            var category = {
+                "name": name
+            }
+            $.ajax({
+                url:'/api/v1/categories/',
+                type: 'post',
+                data: JSON.stringify(category),
+                contentType:'application/json',
+                success:function (response) {
+                    console.log(response);
+                    window.location.reload();
+                },
+                error:function (error) {
+                    console.log(error)
+                }
+
+            });
+
+        });
+
+
+
     });
 </script>
 </body>
